<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewRegistrationProfessionalActivity"
    android:paddingLeft="20dip"
    android:paddingRight="20dip"
    android:background="@android:color/white"
    android:gravity="center"
    android:id="@+id/id_new_registration_professional_outermost_ll">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="40dip"
        android:textColor="@color/darkSlateGrey"
        android:id="@+id/id_new_registration_professional_tv"
        android:text="@string/new_registration_heading_text"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/id_name_ll"
        android:layout_marginBottom="10dip">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_et_header"
        android:textColor="@color/darkSlateGrey"
        android:id="@+id/id_name_tv"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="5dip"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="5dip"
        android:paddingBottom="5dip"
        android:textCursorDrawable="@null"
        android:id="@+id/id_name_et"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/id_email_ll"
        android:layout_marginBottom="10dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_et_header"
            android:textColor="@color/darkSlateGrey"
            android:id="@+id/id_email_tv"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="5dip"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:textCursorDrawable="@null"
            android:id="@+id/id_email_et"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/id_mobile_ll"
        android:layout_marginBottom="10dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_et_header"
            android:textColor="@color/darkSlateGrey"
            android:id="@+id/id_mobile_tv"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="5dip"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:textCursorDrawable="@null"
            android:id="@+id/id_mobile_et"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_terms_privacy_policy_tv"
        android:layout_marginTop="20dip"
        android:text="@string/terms_privacy_policy"/>



    <Button
        android:layout_width="wrap_content"
        android:text="@string/sign_up_btn_text"
        android:textAllCaps="false"
        android:id="@+id/id_sign_up_btn"
        android:layout_marginTop="100dip"
        android:background="@drawable/button_bg_rounded_corners"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

</LinearLayout>